--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlWjbTNTDIZJ-FrLpRPr13uZ5gA0Mfmvg"></script>
     <script type="module" src="/src/main.tsx"></script>
     <script src="./node_modules/tw-elements/dist/js/index.min.js"></script>
   </body>
